<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_note"
        tools:context=".NoteActivity">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_courses" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/text_note_title" app:layout_constraintTop_toBottomOf="@+id/spinner_courses"
            app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
            app:layout_constraintStart_toStartOf="@+id/spinner_courses" android:layout_marginTop="8dp"
            android:hint="Note title"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/text_note_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_note_title"
            app:layout_constraintEnd_toEndOf="@+id/text_note_title"
            app:layout_constraintStart_toStartOf="@+id/text_note_title" android:hint="Note text"/>
</android.support.constraint.ConstraintLayout>